--- a/test2.html
+++ b/test2.html
@@ -46,7 +46,7 @@ description: This is what I do.
             p.offsetChangeImg = 0;
             p.changeImgG = '';
             p.preload = function() {
-              p.img = p.loadImage('./img/test4.jpg');
+              p.img = p.loadImage('./img/001.jpg');
             };
             p.setup = function() {
               p.initSetup();
