modif skin loader

--- a/kaable.html
+++ b/kaable.html
@@ -189,13 +189,11 @@ a.tw {
 .blob {
   width: 2rem;
   height: 2rem;
-  background: rgba(230, 230, 230, 0.85);
+  background: #303030;
   border-radius: 50%;
   position: absolute;
   left: calc(50% - 1rem);
   top: calc(50% - 1rem);
-  -webkit-box-shadow: 0 0 1rem rgba(255, 255, 255, 0.25);
-          box-shadow: 0 0 1rem rgba(255, 255, 255, 0.25);
 }
 
 .blob-2 {
